--- a/Main.env
+++ b/Main.env
@@ -3,4 +3,4 @@
 # and update the environment variables to match your
 # desired config
 
-TELEGRAM_TOKEN=123456:aBcDeF_gHiJkLmNoP-q
+TELEGRAM_TOKEN=123456:6260545100:AAG9V73zvSbJz40fJQ_UxiMgd0Vrl0hUUTo
